--- a/assets/resume/index.html
+++ b/assets/resume/index.html
@@ -1,8 +1,8 @@
+<html>
 
-<!-- saved from url=(0087)file:///Users/adrian/Documents/Resume/Resumes/html%20Resume/personal_webpage/index.html -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <link rel="stylesheet" media="all" href="file:///Users/adrian/Documents/Resume/Resumes/html%20Resume/personal_webpage/css.css">
-    
+<head>
+    <link rel="stylesheet" media="all" href="css.css" />
+    <meta charset="utf-8" />
     <style>
         html {
             overflow-y: scroll;
@@ -32,43 +32,29 @@
                         <div class="top-block__name setting--primary-text">Adrian Jewell, Software Engineer</div>
                         <div class="top-block__contacts">
                             <span class="top-block__city">
-                                <span>S</span>
-                                <span>A</span>
-                                <span>N</span>
-                                <span> </span>
-                                <span>F</span>
-                                <span>R</span>
-                                <span>A</span>
-                                <span>N</span>
-                                <span>C</span>
-                                <span>I</span>
-                                <span>S</span>
-                                <span>C</span>
+                                <span>B</span>
                                 <span>O</span>
-                                <span>,</span>
-                                <span> </span>
-                                <span>9</span>
-                                <span>4</span>
-                                <span>1</span>
-                                <span>0</span>
-                                <span>3</span>
-                                <span>,</span>
-                                <span> </span>
-                                <span>U</span>
-                                <span>N</span>
-                                <span>I</span>
-                                <span>T</span>
-                                <span>E</span>
-                                <span>D</span>
-                                <span> </span>
                                 <span>S</span>
                                 <span>T</span>
+                                <span>O</span>
+                                <span>N</span>
+                                <span>,</span>
+                                <span> </span>
+                                <span>M</span>
                                 <span>A</span>
-                                <span>T</span>
+                                <span>S</span>
+                                <span>S</span>
+                                <span>A</span>
+                                <span>C</span>
+                                <span>H</span>
+                                <span>U</span>
+                                <span>S</span>
                                 <span>E</span>
+                                <span>T</span>
+                                <span>T</span>
                                 <span>S</span>
                             </span>
-                            <span class="top-block__contacts-sep">·</span>
+                            <span class="top-block__contacts-sep">&middot;</span>
                             <span class="top-block__phone">
                                 <span>6</span>
                                 <span>0</span>
@@ -103,28 +89,46 @@
                         <div class="experience" style="page-break-inside: avoid;">
                             <div class="experience__header">
                                 <div class="experience__header-line">
-                                    <div class="experience__title">Technical Career Coach, App Academy</div>
-                                    <div class="experience__date">January 2019 – Present, San Francisco, CA</div>
+                                    <div class="experience__title">Student of Machine Learning</div>
+                                    <div class="experience__date">August 2019 - Present, Boston, MA</div>
                                 </div>
                             </div>
                         </div>
                         <div class="experience" style="page-break-inside: avoid;">
                             <div class="experience__header">
                                 <div class="experience__header-line">
-                                    <div class="experience__title">Software Engineer, Jewell Consulting</div>
+                                    <div class="experience__title">Instructor, App Academy</div>
+                                    <div class="experience__date">January – August 2019, San Francisco, CA</div>
+                                </div>
+                            </div>
+                            <div class="experience__description">
+                                <div>
+                                    <ul>
+                                        <li>Published and received 42K+ views of a 1600-word article about coding and
+                                            music, resulting in the satisfaction of having communicated one's ideas
+                                            publically.
+                                            <a
+                                                href="https://blog.appacademy.io/state-management-observations-on-how-music-and-coding-are-so-similar/">(link)</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="experience" style="page-break-inside: avoid;">
+                            <div class="experience__header">
+                                <div class="experience__header-line">
+                                    <div class="experience__title">Developer, Theorizer</div>
                                     <div class="experience__date">November – December 2018, San Francisco, CA</div>
                                 </div>
                             </div>
                             <div class="experience__description">
                                 <div>
                                     <ul>
-                                        <li>Accepted into the Oberlin LaunchU Accelerator Bootcamp with <a href="https://github.com/adrianjewell91/theorizer">Theorizer</a>,
+                                        <li>Documented <a
+                                                href="https://github.com/adrianjewell91/theorizer">Theorizer</a>,
                                             an artificial intelligence for piano music analysis with potential to
-                                            generate $3000 a month in revenue.</li>
-                                        <li>Verified quality of media playback through research and testing for <a href="https://imslp.org/">IMSLP.org</a>,
-                                            a free online catalog of over 450,000 musical scores.</li>
-                                        <li>Saved ten hours of work for Slaughter Enterprises with a web-based script.
-                                        </li>
+                                            generate $3000 a month in revenue, resulting in being accepted into the
+                                            Oberlin LaunchU Accelerator Bootcamp.</li>
                                     </ul>
                                 </div>
                             </div>
@@ -140,9 +144,9 @@
                             <div class="experience__description">
                                 <div>
                                     <ul>
-                                        <li>Delivered tens of millions of dollars of value to the company by
-                                            streamlining inventory management processes.</li>
-                                        <li>Built features currently in use at over 1000 stores around the country by
+                                        <!-- <li>Delivered millions of dollars of savings to the company by
+                                            streamlining inventory management processes.</li> -->
+                                        <!-- <li>Built features currently in use at over 1000 stores around the country by
                                             pushing robust Javascript, HTML5, CSS3, and Java code to production for an
                                             OMS with
                                             30,000+ daily users.</li>
@@ -154,13 +158,14 @@
                                             (30+), demoed to leadership (3x), negotiated API contracts (4).</li>
                                         <li>Closed a performance gap by preventing 30,000 late-order fulfillments
                                             during
-                                            peak season with a new feature.</li>
-                                        <li>Helped an intern complete a
+                                            peak season with a new feature.</li> -->
+                                        <li>Gave direct mentorship in frontend development for
+                                            1.5 months, resulting in an intern completing a
                                             successful demo to executive leadership
-                                            and land a job offer through direct mentorship in frontend development for
-                                            1.5 months.</li>
-                                        <li>Hit the ground running in a position with minimal formal on-boarding, and
-                                            wrote over 4000 words of previously unwritten documentation to
+                                            .</li>
+                                        <li>Hit the ground running in the position,
+                                            resulting in successful projects and
+                                            over 4000 words of previously unwritten documentation to
                                             assist
                                             future developers.</li>
                                     </ul>
@@ -257,12 +262,14 @@
                     </div>
                     <div class="section__content">
                         <div class="socials">
-                            <div class="socials__label">Projects Portfolio</div>
-                            <a class="socials__link setting--primary-text" href="http://www.adrianjewell.com/">www.adrianjewell.com</a>
+                            <div class="socials__label">Portfolio</div>
+                            <a class="socials__link setting--primary-text"
+                                href="http://www.adrianjewell.com">www.adrianjewell.com</a>
                         </div>
                         <div class="socials">
                             <div class="socials__label">Solo Piano Album (Live)</div>
-                            <a class="socials__link setting--primary-text" href="http://www.soundcloud.com/adrianjewell">Listen
+                            <a class="socials__link setting--primary-text"
+                                href="http://www.soundcloud.com/adrianjewell">Listen
                                 on Soundcloud.</a>
                             <div class="socials__label">(Gave 100+ Recitals)</div>
                         </div>
@@ -299,43 +306,34 @@
                     </div>
                     <div class="section__content">
                         <div class="skill">
-                            <div class="skill__name">Web Components</div>
+                            <div class="skill__name">Software Engineering</div>
                             <div class="skill__progress">
                                 <div class="skill__progress-inner" style="width: -20%;"></div>
                             </div>
                         </div>
                         <div class="skill">
-                            <div class="skill__name">Angular JS/2+</div>
+                            <div class="skill__name">Full-Stack Web
+                                Development</div>
                             <div class="skill__progress">
                                 <div class="skill__progress-inner" style="width: -20%;"></div>
                             </div>
                         </div>
                         <div class="skill">
-                            <div class="skill__name">Ruby on Rails, Django, Node.js</div>
+                            <div class="skill__name">Object-Oriented
+                                Programming</div>
                             <div class="skill__progress">
                                 <div class="skill__progress-inner" style="width: -20%;"></div>
                             </div>
                         </div>
                         <div class="skill">
-                            <div class="skill__name">React/Redux</div>
+                            <div class="skill__name">Data Structures and
+                                Algorithms</div>
                             <div class="skill__progress">
                                 <div class="skill__progress-inner" style="width: -20%;"></div>
                             </div>
                         </div>
                         <div class="skill">
-                            <div class="skill__name">HTML5 and CSS3</div>
-                            <div class="skill__progress">
-                                <div class="skill__progress-inner" style="width: -20%;"></div>
-                            </div>
-                        </div>
-                        <div class="skill">
-                            <div class="skill__name">Webpack, Jenkins, Git</div>
-                            <div class="skill__progress">
-                                <div class="skill__progress-inner" style="width: -20%;"></div>
-                            </div>
-                        </div>
-                        <div class="skill">
-                            <div class="skill__name">SQL</div>
+                            <div class="skill__name">Education</div>
                         </div>
                     </div>
                 </div>
@@ -358,6 +356,6 @@
             </div>
         </div>
     </div>
+</body>
 
-
-</body></html>
+</html>
