--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<div class="inner">
 			<span class="icon major fa-music"></span>
 			<h1>I'm <strong>Adrian</strong>, a software engineer<br />
-				and pianist based in San Francisco</a>.</h1>
+				and pianist based in Boston, MA</a>.</h1>
 			<!-- <p>It'snic</p> -->
 			<ul class="actions special">
 				<!-- <li><a href="#one" class="button scrolly">Discover</a></li> -->
@@ -39,20 +39,23 @@
 					<header class="major">
 						<h2>Adrian Jewell, Software Engineer</h2>
 					</header>
-					<p>Solving a problem is a multi-step process. One must perceive all possible use cases,
-						find
-						the optimal solution, then produce an elegant implementation. This takes time and energy, but at
-						the end, if the
+					<p>Hi, my name is Adrian, and I love to solve problems. To me, solving a problem is a beautiful
+						process.
+						First, one begins by letting the grandeur of considering all possible test cases express itself
+						fully.
+						Next,
+						the problem solver opens his/her mind to the meditative experience of arriving at
+						an optimal solution. Finally, the industious activity of producing an elegant
+						implementation serves to cleanse the spirit, and culminates in the visceral satisfaction of
+						seeing
+						the client put it to good use. If
+						the
 						engineering is
-						correct, a great tool will have been built. If the client utilizes the tool, he/she will
-						transcend it,
-						operating
-						on
-						a
-						level
-						beyond what was possible before. In this way, one defines success by the degree to which the
-						engineer lifts
-						the user to this higher plane.
+						correct, a great tool will have been built, and the client will
+						operate
+						more efficiently. In this way, I reach success when the
+						engineering helps
+						others to achieve what was previously impossible.
 					</p>
 				</div>
 				<div class="col-6 col-12-medium imp-medium">
@@ -167,7 +170,7 @@
 	</section> -->
 
 	<!-- Three -->
-	<section id="three" class="main style2 special">
+	<!-- <section id="three" class="main style2 special">
 		<style>
 			img {
 				object-fit: cover;
@@ -180,12 +183,12 @@
 					Work Experience
 				</h2>
 			</header>
-			<!-- <p>.</p> -->
+			<p>.</p>
 			<div class="row gtr-150">
 				<div class="col-4 col-12-medium">
 					<span class="image fit"><img src="images/appacademy.jpg" alt="" /></span>
 					<h3>Technical Instructor</h3>
-					<p>As a full-time instructor, I guide students
+					<p>As a full-time instructor, I've guided students
 						through
 						the final stages of App Academy's full-stack web-development curriculum.
 						<br><br>
@@ -198,13 +201,7 @@
 					<h3>Software Engineer</h3>
 					<p>At Williams-Sonoma Inc., our team streamlined inventory management processes for departments
 						across the
-						organization.</br></br>Technologies:
-						<strong>Web Components, Angular, Typescript, Java, Springboot,
-							IBM
-							Sterling
-							OMS, Oracle
-							SQL
-							Developer.</strong></p>
+						organization.
 				</div>
 				<div class="col-4 col-12-medium">
 					<span class="image fit"><img src="images/mealme.png" alt="" /></span>
@@ -228,30 +225,26 @@
 						(FirstNet Public
 						Safety Hackathon).
 					</p>
-				</div>
-				<div class="col-4 col-12-medium">
+				</div> -->
+	<!-- <div class="col-4 col-12-medium">
 					<span class="image fit"><img src="images/theorizer.png" alt="" /></span>
 					<h3>Theorizer</h3>
 					<p>Theorizer is an artificial intelligence that helps users memorize piano music.
-						</br> </br> Technologies: <strong>React/Redux, Django, Keras, Theano.</strong></p>
+					</p>
 					<ul class="actions special">
 						<li><a href="https://github.com/adrianjewell91/theorizer" class="button">Github</a></li>
 						<li><a href="https://theorizer.herokuapp.com" class="button">Live</a></li>
 					</ul>
-				</div>
-				<div class="col-4 col-12-medium">
+				</div> -->
+	<!-- <div class="col-4 col-12-medium">
 					<span class="image fit"><img src="images/pianocloud.png" alt="" /></span>
 					<h3>Pianist and Composer</h3>
-					<p>I'm always interested in collaborating with others, and I currently study
-						at
-						the San Francisco Conservatory.
-
-						<ul class="actions special">
-							<li><a href="https://www.soundcloud.com/adrianjewell" class="button">Live Recordings</a>
-							</li>
-						</ul>
-				</div>
-				<!-- <div class="col-4 col-12-medium">
+					<ul class="actions special">
+						<li><a href="https://www.soundcloud.com/adrianjewell" class="button">Live Recordings</a>
+						</li>
+					</ul>
+				</div> -->
+	<!-- <div class="col-4 col-12-medium">
 					<span class="image fit"><img src="images/translateoverflow.png" alt="" /></span>
 					<h3>Translate Overflow</h3>
 					<p>Thank you to Chris Guan and Porfirio Matias for building Translate Overflow with me. This application gets
@@ -313,8 +306,8 @@
 						<li><a href="https://github.com/adrianjewell91/PianoCloud" class="button">Github</a></li>
 					</ul>
 				</div> -->
-			</div>
-		</div>
+	</div>
+	</div>
 	</section>
 
 	<!-- Four -->
