--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<noscript>
 		<link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+
 </head>
 
 <body class="is-preload">
@@ -26,7 +27,7 @@
 			<!-- <p>It'snic</p> -->
 			<ul class="actions special">
 				<!-- <li><a href="#one" class="button scrolly">Discover</a></li> -->
-				<li><a href="./assets/resume.pdf" class="button">View Resume</a></li>
+				<li><a href="#one" class="button scrolly">Discover</a></li>
 			</ul>
 		</div>
 	</section>
