revise after being high

--- a/index.html
+++ b/index.html
@@ -40,23 +40,10 @@
 					<header class="major">
 						<h2>Adrian Jewell, Software Engineer</h2>
 					</header>
-					<p>Hi, my name is Adrian, and I love to solve problems. To me, solving a problem is a beautiful
-						process.
-						First, one begins by letting the grandeur of considering all possible test cases express itself
-						fully.
-						Next,
-						the problem solver opens his/her mind to the meditative experience of arriving at
-						an optimal solution. Finally, the industious activity of producing an elegant
-						implementation serves to cleanse the spirit, and culminates in the visceral satisfaction of
-						seeing
-						the client put it to good use. If
-						the
-						engineering is
-						correct, a great tool will have been built, and the client will
-						operate
-						more efficiently. In this way, I reach success when the
-						engineering helps
-						others to achieve what was previously impossible.
+					<p>Hi! My name is Adrian, and I love to solve problems. Thank you so much for visiting my personal
+						site, and please feel free to learn more about my work through the links <a href="#footer"
+							class="scrolly">below</a>.
+
 					</p>
 				</div>
 				<div class="col-6 col-12-medium imp-medium">
@@ -387,10 +374,10 @@
 		<ul class="icons">
 			<li><a href="./assets/resume.pdf" class="icon alt"><span>C.V.</span></a> </li>
 			<!-- <li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li> -->
-			<li><a href="https://www.linkedin.com/in/adrian-jewell/" class="icon alt fa-linkedin"><span
-						class="label">LinkedIn</span></a></li>
 			<li><a href="https://www.soundcloud.com/adrianjewell" class="icon alt fa-soundcloud"><span
 						class="label">Soundcloud</span></a></li>
+			<li><a href="https://www.linkedin.com/in/adrian-jewell/" class="icon alt fa-linkedin"><span
+						class="label">LinkedIn</span></a></li>
 			<li><a href="https://github.com/adrianjewell91" class="icon alt fa-github"><span
 						class="label">GitHub</span></a></li>
 			<li><a href="mailto:adrianjewell91@gmail.com" class="icon alt fa-envelope"><span
