--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 					<header class="major">
 						<h2>Adrian Jewell, Software Engineer</h2>
 					</header>
-					<p>Hi! My name is Adrian, and I love to solve problems. Thank you so much for visiting my personal
-						site, and please feel free to learn more about my work through the links <a href="#footer"
+					<p>Hi, my name is Adrian, and I love to solve problems. Thank you so much for visiting my personal
+						site! Please feel free to learn more about my work through the links <a href="#footer"
 							class="scrolly">below</a>.
 
 					</p>
