--- a/index.html
+++ b/index.html
@@ -40,9 +40,8 @@
 					<header class="major">
 						<h2>Adrian Jewell, Software Engineer</h2>
 					</header>
-					<p>Hi, my name is Adrian, and I love to solve problems. Thank you so much for visiting my personal
-						site! Please feel free to learn more about my work through the links <a href="#footer"
-							class="scrolly">below</a>.
+					<p>Thank you so much for visiting the personal website for Adrian Jewell! Please feel free to learn
+						more about his work by exploring the links <a href="#footer" class="scrolly">below</a>.
 
 					</p>
 				</div>
