--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 					<header class="major">
 						<h2>Adrian Jewell, Software Engineer</h2>
 					</header>
-					<p>Thank you so much for visiting the personal website for Adrian Jewell! Please feel free to learn
+					<p>Thank you for visiting the personal website for Adrian Jewell! Feel free to learn
 						more about his work by exploring the links <a href="#footer" class="scrolly">below</a>.
 
 					</p>
