remove stirp button

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 					<p>Thank you for visiting the personal website for Adrian Jewell! Feel free to learn
 						more about his work by exploring the links <a href="#footer" class="scrolly">below</a>.
 						<!-- Load Stripe.js on your website. -->
-						<script src="https://js.stripe.com/v3"></script>
+						<!-- <script src="https://js.stripe.com/v3"></script> -->
 						<!-- Create a button that your customers click to complete their purchase. Customize the styling to suit your branding. -->
-						<button id="checkout-button-sku_G2wUA3hxOjHqhz" role="link">
+						<!-- <button id="checkout-button-sku_G2wUA3hxOjHqhz" role="link">
 							Checkout
 						</button>
 
@@ -80,7 +80,7 @@
 										});
 								});
 							})();
-						</script>
+						</script> -->
 					</p>
 				</div>
 				<div class="col-6 col-12-medium imp-medium">
