--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
 					</p>
 				</div>
 				<div class="col-6 col-12-medium imp-medium">
-					<span class="image fit"><img src="images/headshot.jpg" alt=""
-							style="object-fit: cover; object-position: 0% 20%; height: 375px; width: 100%;" /></span>
+					<span class="image fit"><img src="images/adrian-jewell_2.jpg" alt=""
+							style="object-fit: cover; height: 375px; width: 100%;" /></span>
 				</div>
 			</div>
 		</div>
