update with links

--- a/index.html
+++ b/index.html
@@ -41,7 +41,12 @@
 						<h2>Adrian Jewell, Software Engineer</h2>
 					</header>
 					<p>Thank you for visiting the personal website for Adrian Jewell! Feel free to learn
-						more about his work by exploring the links <a href="#footer" class="scrolly">below</a>.
+						more by exploring his <a href="https://soundcloud.com/adrianjewell/sets">soundcloud</a> or <a href="https://github.com/Adrianjewell91/">github</a>,
+						or by reading any of his following articles:
+						<ol>
+							<li><a href="https://blog.appacademy.io/state-management-observations-on-how-music-and-coding-are-so-similar/">Statement Management: Observations on how Music and Coding are so similar.</a></li>
+							<li><a href="https://github.com/Adrianjewell91/how-to-code">For the Lay Audience: How Computer Programmers Think.</a></li>
+						</ol>
 						<!-- Load Stripe.js on your website. -->
 						<!-- <script src="https://js.stripe.com/v3"></script> -->
 						<!-- Create a button that your customers click to complete their purchase. Customize the styling to suit your branding. -->
