--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
 					<header class="major">
 						<h2>Adrian Jewell, Software Engineer</h2>
 					</header>
-					<p>Thank you for visiting the personal website for Adrian Jewell! Feel free to learn
-						more by exploring his <a href="https://soundcloud.com/adrianjewell/sets">soundcloud</a> or <a
+					<p>Thanks for visiting Adrian Jewell's personal website! Feel free to
+						explore his <a href="https://soundcloud.com/adrianjewell/sets">soundcloud</a> and <a
 							href="https://github.com/Adrianjewell91/">github</a>,
-						or by reading any of his following articles:
+						or read any of his published articles:
 						<!-- <ol> -->
 						<li style="list-style: none"><a
 								href="https://blog.appacademy.io/state-management-observations-on-how-music-and-coding-are-so-similar/">Statement
