--- a/index.html
+++ b/index.html
@@ -40,11 +40,12 @@
 					<header class="major">
 						<h2>Adrian Jewell, Software Engineer</h2>
 					</header>
-					<p>Thanks for visiting Adrian Jewell's personal website! Feel free to
-						explore his <a href="https://soundcloud.com/adrianjewell/sets">soundcloud</a> and <a
-							href="https://github.com/Adrianjewell91/">github</a>,
-						or read any of his published articles:
+					<p>Thanks for visiting Adrian Jewell's personal website! Feel free to enjoy the links below.
+						Explore his <a href="https://github.com/Adrianjewell91/"> github</a> and
+						check out
+						his <strong>new</strong> album: <a href="https://soundcloud.com/adrianjewell/sets"> Original Solos</a>.
 						<!-- <ol> -->
+
 						<li style="list-style: none"><a
 								href="https://blog.appacademy.io/state-management-observations-on-how-music-and-coding-are-so-similar/">Statement
 								Management: Observations on how music and coding are so similar.</a></li><br>
