--- a/index.html
+++ b/index.html
@@ -42,9 +42,8 @@
 					</header>
 					<p>Thanks for visiting Adrian Jewell's personal website! Explore his <a href="https://github.com/Adrianjewell91/"> github</a> and
 						check out
-						his <strong>new</strong> album: <a href="https://soundcloud.com/adrianjewell/sets"> Original Solos</a>.
+						his <strong>new</strong> album on <a href="https://soundcloud.com/adrianjewell/sets"> soundcloud</a>.
 						<!-- <ol> -->
-							Other publications:
 						<li style="list-style: none"><a
 								href="https://blog.appacademy.io/state-management-observations-on-how-music-and-coding-are-so-similar/">Statement
 								Management: Observations on how music and coding are so similar.</a></li><br>
