--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
 			<h2>Contact</h2>
 		</header>
 		<ul class="icons">
-			<!-- <li><a href="./assets/resume.pdf" class="icon alt"><span>C.V.</span></a> </li> -->
+			<li><a href="./assets/resume-music/index.html.pdf" class="icon alt"><span>C.V.</span></a> </li>
 			<!-- <li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li> -->
 			<li><a href="https://www.soundcloud.com/adrianjewell" class="icon alt fa-soundcloud"><span
 						class="label">Soundcloud</span></a></li>
