--- a/assets/resume-music/index.html
+++ b/assets/resume-music/index.html
@@ -29,7 +29,7 @@
             <div class="container__main">
                 <div class="top-block" style="margin-bottom: 3.6rem;">
                     <div class="top-block__details">
-                        <div class="top-block__name setting--primary-text">Adrian Jewell</div>
+                        <div class="top-block__name setting--primary-text">Adrian Jewell (爱德华)</div>
                         <div class="top-block__contacts">
                             <span class="top-block__city">
                                 <span>B</span>
@@ -95,7 +95,7 @@
                             <div class="experience__header">
                                 <div class="experience__header-line">
                                     <div class="experience__title">Pianist & Composer</div>
-                                    <div class="experience__date">2010 - Present, Boston/San Francisco/Changsha</div>
+                                    <div class="experience__date">2010 - Present, Boston/San Francisco/湖南省长沙市</div>
                                 </div>
                             </div>
                             <div class="experience__description">
@@ -149,15 +149,9 @@
                                             Completed 1760 hours of AmeriCorps service at the MATCH Charter High School.
                                         </li>
                                         <li>
-                                            Educated 420 Chinese Middle School students in Hunan, China.
+                                            Completed one-year residence in Hunan, China, educating over 420 Chinese
+                                            Middle School students.
                                         </li>
-                                        <li>
-                                            Gave direct mentorship in frontend software development for 1.5 months, resulting in
-                                            an intern completing a successful demo to
-                                            executive leadership.
-                                        </li>
-                                        <li>Served as a camp counselor and piano instructor at Blue Lake Fine Arts Camp,
-                                            a sleep-away summer camp.</li>
                                     </ul>
                                 </div>
                             </div>
@@ -279,39 +273,25 @@
                     </div>
                     <div class="section__content">
                         <div class="skill">
-                            <div class="skill__name">Performance</div>
-                            <div class="skill__progress">
-                                <div class="skill__progress-inner" style="width: -20%;"></div>
-                            </div>
-                        </div>
-                        <div class="skill">
                             <div class="skill__name">Software Engineering</div>
                             <div class="skill__progress">
                                 <div class="skill__progress-inner" style="width: -20%;"></div>
                             </div>
                         </div>
                         <div class="skill">
-                            <div class="skill__name">Object Oriented
-                                Programming</div>
+                            <div class="skill__name">Music Composition</div>
                             <div class="skill__progress">
                                 <div class="skill__progress-inner" style="width: -20%;"></div>
                             </div>
                         </div>
                         <div class="skill">
-                            <div class="skill__name">Data Structures and
-                                Algorithms</div>
+                            <div class="skill__name">Public Speaking</div>
                             <div class="skill__progress">
                                 <div class="skill__progress-inner" style="width: -20%;"></div>
                             </div>
                         </div>
                         <div class="skill">
                             <div class="skill__name">Education</div>
-                            <div class="skill__progress">
-                                <div class="skill__progress-inner" style="width: -20%;"></div>
-                            </div>
-                        </div>                        
-                        <div class="skill">
-                            <div class="skill__name">Public Speaking</div>
                             <div class="skill__progress">
                                 <div class="skill__progress-inner" style="width: -20%;"></div>
                             </div>
