--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 					</header>
 					<p>Thanks for visiting Adrian Jewell's personal website! Explore his <a href="https://github.com/Adrianjewell91/"> github</a> and
 						check out
-						his <strong>new</strong> album on <a href="https://soundcloud.com/adrianjewell/sets"> soundcloud</a>.
+						his piano albums on <a href="https://soundcloud.com/adrianjewell/sets"> soundcloud</a>.
 						<!-- <ol> -->
 						<li style="list-style: none"><a
 								href="https://blog.appacademy.io/state-management-observations-on-how-music-and-coding-are-so-similar/">Statement
