--- a/assets/resume-music/index.html
+++ b/assets/resume-music/index.html
@@ -75,7 +75,7 @@
                             <div class="experience__header">
                                 <div class="experience__header-line">
                                     <div class="experience__title">Writer</div>
-                                    <div class="experience__date">2018 - Present, Boston/San Francisco</div>
+                                    <div class="experience__date">2018 - Present, Boston, MA</div>
                                 </div>
                             </div>
                             <div class="experience__description">
@@ -101,10 +101,13 @@
                             <div class="experience__description">
                                 <div>
                                     <ul>
-                                        <li>Recorded two solo piano <a
-                                                href="https://soundcloud.com/adrianjewell/sets">albums</a>: one of
-                                            original compositions
-                                            and one of virtuoso classical works.
+                                        <li>Recorded an album of
+                                        original solo piano compositions
+                                        <a href="https://soundcloud.com/adrianjewell/sets/solo-album-1">(link)</a>.
+                                    </li>                                  
+                                        <li>Recorded a collection
+                                            of virtuoso classical piano works
+                                            <a href="https://soundcloud.com/adrianjewell/sets/adrian-jewell-solo-piano">(link)</a>.
                                         </li>
                                     </ul>
                                 </div>
@@ -125,8 +128,8 @@
                                             machine learning web
                                             application for piano music analysis.
                                         </li>
-                                        <li>Wrote software in Javascript, Java, PHP, HTML and CSS for enterprise-level
-                                            ecommerce companies.
+                                        <li>Wrote and delivered software for enterprise-level
+                                            ecommerce firms.
                                         </li>
                                         <li>Implemented a computer from scratch <a
                                                 href="https://github.com/Adrianjewell91/nand2tetris">(link)</a>.</li>
@@ -149,7 +152,7 @@
                                             Completed 1760 hours of AmeriCorps service at the MATCH Charter High School.
                                         </li>
                                         <li>
-                                            Completed one-year residence in Hunan, China, educating over 420 Chinese
+                                            Completed a one-year residence in Hunan, China, educating over 420 Chinese
                                             Middle School students.
                                         </li>
                                     </ul>
