--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 						his piano albums on <a href="https://soundcloud.com/adrianjewell/sets"> soundcloud</a>.
 						<!-- <ol> -->
 						<li style="list-style: none"><a
-								href="https://blog.appacademy.io/state-management-observations-on-how-music-and-coding-are-so-similar/">Statement
+								href="https://blog.appacademy.io/state-management-observations-on-how-music-and-coding-are-so-similar/">State
 								Management: Observations on how music and coding are so similar.</a></li><br>
 						<li style="list-style: none"><a href="https://github.com/Adrianjewell91/how-to-code">For the Lay
 								Audience: How Computer Programmers Think.</a></li>
