--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 						<li style="list-style: none"><a
 								href="https://blog.appacademy.io/state-management-observations-on-how-music-and-coding-are-so-similar/">State
 								Management: Observations on how music and coding are so similar.</a></li><br>
-						<li style="list-style: none"><a href="https://github.com/Adrianjewell91/how-to-code">For the Lay
-								Audience: How Computer Programmers Think.</a></li>
+						<li style="list-style: none"><a href="https://github.com/Adrianjewell91/how-to-code">
+How Computer Programmers Think.</a></li>
 						<!-- </ol> -->
 						<!-- Load Stripe.js on your website. -->
 						<!-- <script src="https://js.stripe.com/v3"></script> -->
