--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
 					<header class="major">
 						<h2>Adrian Jewell, Software Engineer</h2>
 					</header>
-					<p>Thanks for visiting Adrian Jewell's personal website! Explore his <a href="https://github.com/Adrianjewell91/"> github</a> and
+					<p>Thanks for visiting Adrian Jewell's personal website! Explore his <a
+							href="https://github.com/Adrianjewell91/"> github</a> and
 						check out
 						his piano albums on <a href="https://soundcloud.com/adrianjewell/sets"> soundcloud</a>.
 						<!-- <ol> -->
@@ -48,12 +49,16 @@
 								href="https://blog.appacademy.io/state-management-observations-on-how-music-and-coding-are-so-similar/">State
 								Management: Observations on how music and coding are so similar.</a></li><br>
 						<li style="list-style: none"><a href="https://github.com/Adrianjewell91/how-to-code">
-How Computer Programmers Think.</a></li>
-						<!-- </ol> -->
-						<!-- Load Stripe.js on your website. -->
-						<!-- <script src="https://js.stripe.com/v3"></script> -->
-						<!-- Create a button that your customers click to complete their purchase. Customize the styling to suit your branding. -->
-						<!-- <button id="checkout-button-sku_G2wUA3hxOjHqhz" role="link">
+								How Computer Programmers Think. (Article)</a></li>
+						<li style="list-style: none"><a
+								href="https://www.youtube.com/watch?v=6B85OM0PI_E&feature=youtu.be">
+								How Computer Programmers Think. (Video Presentation) </a></li>
+
+							<!-- </ol> -->
+							<!-- Load Stripe.js on your website. -->
+							<!-- <script src="https://js.stripe.com/v3"></script> -->
+							<!-- Create a button that your customers click to complete their purchase. Customize the styling to suit your branding. -->
+							<!-- <button id="checkout-button-sku_G2wUA3hxOjHqhz" role="link">
 							Checkout
 						</button>
 
