--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 						<li style="list-style: none"><a href="https://github.com/Adrianjewell91/how-to-code">
 								How Computer Programmers Think. (Article)</a></li>
 						<li style="list-style: none"><a
-								href="https://www.youtube.com/watch?v=6B85OM0PI_E&feature=youtu.be">
+								href="https://www.youtube.com/watch?v=6B85OM0PI_E&list=PL5SZIf1gi14Y8kwqfthd3pwfkwhbF58Ye">
 								How Computer Programmers Think. (Video Presentation) </a></li>
 
 							<!-- </ol> -->
